# apiclient/src/models/cust-info-modify-input-dto.ts
@@ -1,0 +1,62 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * 抄表系统 - Pda抄表
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: v1
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+/**
+ * Pda 更新客户基础信息
+ * @export
+ * @interface CustInfoModifyInputDto
+ */
+export interface CustInfoModifyInputDto {
+    /**
+     * 客户编号
+     * @type {number}
+     * @memberof CustInfoModifyInputDto
+     */
+    custId: any;
+    /**
+     * 旧-联系方式
+     * @type {string}
+     * @memberof CustInfoModifyInputDto
+     */
+    oldMobile?: any;
+    /**
+     * 旧-钢印号
+     * @type {string}
+     * @memberof CustInfoModifyInputDto
+     */
+    oldSteelMark?: any;
+    /**
+     * 旧-安装位置
+     * @type {string}
+     * @memberof CustInfoModifyInputDto
+     */
+    oldInstallLocation?: any;
+    /**
+     * 新-联系方式
+     * @type {string}
+     * @memberof CustInfoModifyInputDto
+     */
+    newMobile?: any;
+    /**
+     * 新-钢印号
+     * @type {string}
+     * @memberof CustInfoModifyInputDto
+     */
+    newSteelMark?: any;
+    /**
+     * 新-安装位置
+     * @type {string}
+     * @memberof CustInfoModifyInputDto
+     */
+    newInstallLocation?: any;
+}
