# apiclient/src/models/index.ts
@@ -1,3 +1,5 @@
+export * from './book-sort-index-dto';
+export * from './cust-info-modify-input-dto';
 export * from './fee-id';
 export * from './log-output';
 export * from './login-input';
