# apiclient/src/models/pda-payment-input.ts
@@ -11,9 +11,6 @@
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
  */
-
-import { FeeId } from "./fee-id";
-
 /**
  * Pda 现金收费
  * @export
@@ -31,7 +28,7 @@ export interface PdaPaymentInput {
      * @type {Array&lt;FeeId&gt;}
      * @memberof PdaPaymentInput
      */
-    paymnetMobileFeeInput?: FeeId[];
+    paymnetMobileFeeInput?: any;
     /**
      * 实收金额
      * @type {number}
